# ProjectWalk

./: .gitignore  build.gradle  import-summary.txt  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kenvix/newsproject/newsproject/android/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/kenvix/walk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kenvix/newsproject/newsproject/android/: ApplicationEnvironment.kt  ApplicationRuntime.kt
app/src/main/java/com/kenvix/walk/: ApplicationEnvironment.kt  ApplicationProperties.java  JniMain.java
app/src/main/java/com/kenvix/walk/exception/: InvalidAuthorizationException.java
app/src/main/java/com/kenvix/walk/menu/fragment/: CapturePicturesFragment.java  CommunicaionFragment.java  OpinionFragment.java  PersonalInformationFragment.java  capturePicturesFragment.java  communicaionFragment.java  initNavigation.java  opinionFragment.java  personalInformationFragment.java
app/src/main/java/com/kenvix/walk/pojo/common/: LoginResult.java  RecognizerRequest.java  UserInfo.java
app/src/main/java/com/kenvix/walk/pojo/request/: LoginRequestResult.java  (+3 more)
app/src/main/java/com/kenvix/walk/preferences/: AbstractPreferencesManager.kt  WalkCounterPreferences.kt
app/src/main/java/com/kenvix/walk/services/: BaseService.kt  WalkCounterService.kt
app/src/main/java/com/kenvix/walk/utils/: AndroidLoggingHandler.java  CVUtils.java  InitializerUtils.kt  Invoker.kt  ServiceBinder.kt  ServiceUtils.kt  SystemActivities.kt  WebViewInitializer.kt
app/src/main/jni/: Android.mk  display-utils.c  jni-main.c
app/src/main/jni/include/: com_kenvix_walk_JniMain.h
app/src/main/res/drawable/: bg_login_input_ok.xml  bg_login_navigation_bar.xml  bg_login_register.xml  bg_login_submit.xml  ic_cc_tag_more.xml  ic_discuss.xml  ic_material.xml  ic_selector_checkbox.xml  ic_tag.xml  ic_user.xml  ic_user_2.xml  login_submit_lock.xml  person_button.xml  register_call_sms.xml
app/src/main/res/layout/: activity_camera_capturer.xml  activity_login.xml  activity_main.xml  activity_recognizer.xml  activity_webview.xml  fragemnt_main_navigation.xml  fragment_capture_pictures.xml  fragment_communication.xml  fragment_exercise.xml  fragment_forum.xml  fragment_main.xml  fragment_opinion.xml  fragment_personal_information.xml  fragment_recognize_selector.xml  login.xml  login_navigation_bar.xml  register_step_one.xml  register_step_two.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/kenvix/walk/: ExampleUnitTest.java
(+54 files in other folders)
